# playwright-python

./: .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  pyproject.toml  pytest.ini
sauce/: login_page.py  test_login.py  test_login_example.py
tests/: test_example.py  test_login.py
